Overlapping chevron arrow fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,7 +210,7 @@ button {
   content: "";
   position: absolute;
   right: -1rem;
-  top: 0;
+  top: -1px;
   width: 0;
   height: 0;
   border-top: 1.375rem solid transparent;
